loan and loan type management controller added

--- a/applications/app-service/src/main/resources/messages_en.properties
+++ b/applications/app-service/src/main/resources/messages_en.properties
@@ -5,3 +5,9 @@ loanType.notFound.id=Loan type not found with id: {0}
 loanPetition.notFound.id=Loan petition not found with id: {0}
 loanPetition.notFound.email=Loan petition not found with email: {0}
 loanPetition.notFound.documentNumber=Loan petition not found with documentNumber: {0}
+name.required=Name is required
+min.amount.required=Minimum amount required
+max.amount.required=Maximum amount required
+amount.max=Maximum amount surpassed
+amount.min=Minimum amount surpassed
+interest.required= Interest rate required
