--- a/applications/app-service/src/main/resources/messages_es.properties
+++ b/applications/app-service/src/main/resources/messages_es.properties
@@ -5,3 +5,9 @@ loanType.notFound.id=Tipo de prestamo no encontrado con id: {0}
 loanPetition.notFound.id=Solicitud no encontrada con id: {0}
 loanPetition.notFound.email=Solicitud no encontrada con email: {0}
 loanPetition.notFound.documentNumber=Solicitud no encontrada con número de documento: {0}
+name.required=Nombre es requerido
+min.amount.required=Monto mínimo requerido
+max.amount.required=Monto máximo requerido
+amount.max=Se ha superado el monto máximo permitido
+amount.min=Se ha superado el monto mínimo permitido
+interest.required=Tasa de interes requerida
