restconsumer use in request validation

--- a/applications/app-service/src/main/resources/messages_en.properties
+++ b/applications/app-service/src/main/resources/messages_en.properties
@@ -2,6 +2,7 @@ validation.failed=Validation failed
 binding.failed=Binding failed
 state.notFound.id=State not found with id: {0}
 loanType.notFound.id=Loan type not found with id: {0}
+loanType.notFound.amount=Loan type not found by the amount: {0}
 loanPetition.notFound.id=Loan petition not found with id: {0}
 loanPetition.notFound.email=Loan petition not found with email: {0}
 loanPetition.notFound.documentNumber=Loan petition not found with documentNumber: {0}
