--- a/applications/app-service/src/main/resources/messages_es.properties
+++ b/applications/app-service/src/main/resources/messages_es.properties
@@ -2,6 +2,7 @@ validation.failed=Validacion fallida
 binding.failed=Error de mapeo de campos
 state.notFound.id=Estado no encontrado con id: {0}
 loanType.notFound.id=Tipo de prestamo no encontrado con id: {0}
+loanType.notFound.amount=Tipo de prestamo no encontrado para el monto: {0}
 loanPetition.notFound.id=Solicitud no encontrada con id: {0}
 loanPetition.notFound.email=Solicitud no encontrada con email: {0}
 loanPetition.notFound.documentNumber=Solicitud no encontrada con número de documento: {0}
