add swagger operation for all the controllers

--- a/applications/app-service/src/main/resources/messages_en.properties
+++ b/applications/app-service/src/main/resources/messages_en.properties
@@ -11,4 +11,7 @@ min.amount.required=Minimum amount required
 max.amount.required=Maximum amount required
 amount.max=Maximum amount surpassed
 amount.min=Minimum amount surpassed
+amount.required=Amount is required
+term.required=Loan term is required
+document.required=Document number is required
 interest.required= Interest rate required
