--- a/applications/app-service/src/main/resources/messages_es.properties
+++ b/applications/app-service/src/main/resources/messages_es.properties
@@ -11,4 +11,7 @@ min.amount.required=Monto mínimo requerido
 max.amount.required=Monto máximo requerido
 amount.max=Se ha superado el monto m\u00E1ximo permitido
 amount.min=Se ha superado el monto minimo permitido
+amount.required=El monto es obligatorio
+term.required=El plazo del préstamo es obligatorio
+document.required=El número de documento es obligatorio
 interest.required=Tasa de interes requerida
